@@ -165,19 +165,28 @@ class Reporter:
         Raise an exception or generate a warning if appropriate.
         """
         attributes = kwargs.copy()
-        # print "System Message: ", self.levels[level],
-        # print " source", unicode(attributes.get("source")).encode('utf8'),
-        # print " line", attributes.get("line")
         if 'base_node' in kwargs:
             source, line = get_source_line(kwargs['base_node'])
-            # print " base_node:", attributes['base_node']
-            # print "provides source/line:", source, line
             del attributes['base_node']
             if source is not None:
                 attributes.setdefault('source', source)
             if line is not None:
                 attributes.setdefault('line', line)
+                # assert source is not None, "node has line- but no source-argument"
+        if not 'source' in attributes: # 'line' is absolute line number
+            try: # look up (source, line-in-source)
+                source, line = self.locator(attributes.get('line'))
+                # print "locator lookup", kwargs.get('line'), "->", source, line
+            except AttributeError:
+                source, line = None, None
+            if source is not None:
+                attributes['source'] = source
+            if line is not None:
+                attributes['line'] = line
+        # assert attributes['line'] is not None, (message, kwargs)
+        # assert attributes['source'] is not None, (message, kwargs)
         attributes.setdefault('source', self.source)
+
         msg = nodes.system_message(message, level=level,
                                    type=self.levels[level],
                                    *children, **attributes)
